2007-05-16  Karl Runge <runge@karlrunge.com>
	* x11vnc: print out peer host and port for debugging SSL. 
	* ssvnc: rand check, SOCKS support, PORT=, Verify all Certs
	  and accepted certs logging.

2007-05-06  Karl Runge <runge@karlrunge.com>
	* x11vnc: lower -wait and -defer to 20ms.  Change some SSL
	  debug output.  Drop client doing ultravnc stuff in -unixpw
	  during login phase.

2007-05-05  Karl Runge <runge@karlrunge.com>
	* x11vnc: add groups handling for -users mode.

2007-05-01  Karl Runge <runge@karlrunge.com>
	* ssl: update to java viewer and utility scripts (add onetimekey).
	* x11vnc: setsid() for -gone mode. setpgrp for -create script and
	  add -cc 4 to avoid DirectColor.

2007-04-28  Karl Runge <runge@karlrunge.com>
	* x11vnc: -users sslpeer= option. RFB_SSL_CLIENT_CERT var.
	  X11VNC_FINDDISPLAY_ALWAYS_FAILS var. -ncache default 10.
	  gid switch fix.
	* ssvnc: Linux.i*86 fix and code sync.

2007-04-07  Karl Runge <runge@karlrunge.com>
	* x11vnc: add gnome, kde, etc. FINDCREATEDISPLAY tags.
	  In check_ncache periodically check for changed desktop. 

2007-03-24  Karl Runge <runge@karlrunge.com>
	* x11vnc: reverse SSL connections.  -sleepin option.

2007-03-20  Karl Runge <runge@karlrunge.com>
	* x11vnc: Add -httpsredir option for router port redirs.
	  set Xcursor bg/fg color values to zero.  Env var to
	  force timeout: X11VNC_HTTPS_VS_VNC_TIMEOUT.  Let user
	  supply nc=N at login prompt.  Disable -ncache beta
	  test under -http/-httpdir.

2007-03-13  Karl Runge <runge@karlrunge.com>
	* x11vnc: fix crash for kde dcop. limit ncache beta
	  tester to 96MB viewers. 

2007-02-18  Karl Runge <runge@karlrunge.com>
	* x11vnc: Get ultravnc textchat working with ssvnc.

2007-02-16  Karl Runge <runge@karlrunge.com>
	* x11vnc: add Files mode to user controlled input. more
	  ultra/tight filexfer tweaks.  rfbversion remote control.
	  noncache/nc unixpw user opt.

2007-02-15  Karl Runge <runge@karlrunge.com>