@@ -2,7 +2,7 @@
 .TH X11VNC "1" "May 2007" "x11vnc " "User Commands"
 .SH NAME
 x11vnc - allow VNC connections to real X11 displays
-         version: 0.9.1, lastmod: 2007-05-18
+         version: 0.9.1, lastmod: 2007-05-21
 .SH SYNOPSIS
 .B x11vnc
 [OPTION]...
