@@ -15,7 +15,7 @@ int xtrap_base_event_type = 0;
 int xdamage_base_event_type = 0;
 
 /*               date +'lastmod: %Y-%m-%d' */
-char lastmod[] = "0.9.1 lastmod: 2007-05-18";
+char lastmod[] = "0.9.1 lastmod: 2007-05-21";
 
 /* X display info */
 
