@@ -1,3 +1,7 @@
+2007-05-21  Karl Runge <runge@karlrunge.com>
+	* x11vnc: set things up (NCACHE = -1) to not have -ncache
+	  on by default; just give a blurb about it.
+
 2007-05-16  Karl Runge <runge@karlrunge.com>
 	* x11vnc: print out peer host and port for debugging SSL. 
 	* ssvnc: rand check, SOCKS support, PORT=, Verify all Certs
